<resources>
    <string name="app_name">Справочник грибника</string>
    <string name="title">«Справочник грибника»</string>
    <string name="autor">
Разработчик приложения:
Парада Сергей Сергеевич
    </string>
    <string name="run">Продолжить</string>
    <string name="tasteless_mushrooms">Невкусные грибы</string>
    <string name="false_mushrooms">Ложные грибы</string>
    <string name="inedible_mushrooms">Несъедобные  сгрибы</string>
    <string name="Mushrooms_in_the_garden">Грибы в огороде</string>
    <string name="poisonous_mushrooms">Ядовитые грибы</string>
    <string name="taste_category_1">1. вкусовая категория</string>
    <string name="taste_category_edible_3">2. вкусовая категория съедобные </string>
    <string name="taste_category_conditionally_edible_3">3. вкусовая категория условно съедобные</string>
    <string name="category">Категория грибов:</string>
    <string name="i">1</string>
    <string name="r">2</string>
    <string name="t">3</string>
    <string name="f">4</string>
    <string name="h">5</string>
    <string name="x">6</string>
    <string name="b">7</string>
    <string name="p">8</string>
    <string name="n">9</string>
    <string name="im">10</string>
    <string name="a">11</string>
    <string name="todof">TODO</string>
    <string name="o_prog">О программе</string>
    <string name="doc">"""
    Полное имя приложения:
(Разработка ИСС «Справочник грибника»)

  Цель:
В кротчайшие сроки помочь грибнику найти информацию о грибе.

  Решения:
Приложения поможет вам решить какие грибы ядовитые, а какие можно употреблять в пищу

  Особенности:
Простота нахождения информации

  Целевая аудитория:
Люди возрастом от 20 до 55 лет

  Основные этапы работы:
1.	Разработать приложения для помощи людям в лесу.
2.	Сделать простые и информативные окна приложения

  Сроки выполнения:
одна неделя

Разработчик:
  Парада Сергей Сергеевич
"""</string>
    <string name="scroll">scroll</string>
    <string name="textview221">TextView2</string>
    <string name="textview54">TextView5</string>
    <string name="gruzdwhite">"""
    Применение:
Груздь белый относится к высокобелковым продуктам.
Содержит 35% легкоусвояемого белка в составе,
превосходя по данному параметру даже мясо.
Сахар в нем отсуствует, поэтому может присутствовать в рационе диабетиков.
Этим же обусловлено и его включение в диетическое меню:
при низкой калорийности он дает организму необходимые вещества.
    Другие названия:
Сырой груздь.

    Шляпка:
Шляпка белого груздя массивная,
достигает в диаметре от 6 до 20 см; мясистая и плотная.
По форме шляпка распростерто-выпуклая, с вогнутостью в центре,
у старых грибов воронкообразная, с опушенным, завернутым внутрь краем.
Цвет зависит от условий и возраста,
изменяется от молочно-белого до светло-желтоватого.
На шляпке видны водянистые концентрические круги.

    Ножка:
Ножка короткая около 5 см в длину, толстая диаметром до 5 см,
гладкая, иногда с ямками, цилиндрическая;
в зрелом возрасте становится пустотелой. Белого цвета,
на поверхности иногда желтые пятна или ямки.
Груздь белый относится к пластинчатым грибам.
Пластинки нечастые, у молодых грибов белые или кремовые,
по мере зрелости гриба становятся желтоватыми и слегка нисходят по ножке.
"""</string>
    <string name="gruzdyellow">"""
    Применение:
Груздь жёлтый относят к первой вкусовой категории,
в которую входят самые вкусные и питательные грибы.

    Места обитания:
Груздь желтый любит  влажные почвы в хвойных сосновых или еловых лесах смешанных с берёзой.

    Особенности роста:
Плодоносит особенно урожайно с  конца июля и до начала октября.
Груздь желтый встречается небольшими группами.
Жёлтый груздь иногда путают со съедобным синеющим груздём.

    Шляпка:
Шляпка диаметром 17 см., выпуклая в молодом возрасте и
вдавленная в зрелом возрасте, края мохнатенькие, подвёрнутые.
От грязно-жёлтого до жёлто-охряного окраса.
Пластинки частые кремово-жёлтоватого цвета с розоватым оттенком.
Окраска меняется на рыжую, при надавливании на пластинки.

    Ножка:
Ножка по цвету такая же как и шляпка, по длине не превышает 5 см.,
к основанию становится полой и ломкой.

    Мякоть:
Мякоть плотная, белая,на срезе или сломе желтеет и выпускает млечный белый сок,
который тоже со временем желтеет.
    </string>
    <string name="whitegrib_dubovik">"""
    Применение:
Белый гриб дубовый - это один из самых лучших грибов,
и самый ароматный в сушеном виде.
Можно белый гриб дубовый мариновать.
Иногда используется в свежем виде.

    Места обитания:
Белый гриб дубовый - один из самых ранних видов белых грибов.
Появляется уже в мае, плодоносит слоями до октября  месяца.
Распространен в лиственных лесах, особенно под дубами и буками,
а также грабами, липами. На Юге растет под съедобными каштанами.
Белый гриб дубовый предпочитает теплый климат.
Часто можно встретить в горах и холмах.

    Особенности роста:
Споровый порошок оливково-коричневого цвета, сами споры бурые или медово-желтые,
13-20 мкм в длину и 3,5-6 мкм в ширину. Можно спутать с другими видами белого гриба,
у некоторых из которых, например, у Подберезовик сосновый,
ножка тоже с сеточкой, но она покрывает только верхнюю часть.
Свежеиспеченные грибники могут спутать с желчным грибом,
который отличается черной сеточкой на ножке и розоватым гименофором,
но обитает в хвойных лесах.

    Шляпка:
Шляпка от 8 до 30см в диаметре, вначале шаровидная,
затем выпуклая или подушковидная. Кожица слабо бархатистая,
у зрелых экземпляров в сухую погоду, покрывается трещинами,
имеющими характерный сетчатый рисунок. Цвет разнообразный,
но чаще светлых тонов: серовато-бурый, кожисто-коричневый,
кофейный, коричневатый,охристый,иногда с более светлыми пятнами.
Трубочки свободные,тонкие,края трубочек у молодых грибов белые,
потом становятся желтыми или оливково-зелеными.

    Ножка:
Ножка 10-25 см по высоте, 2-7 см в диаметре, вначале булавовидная,
цилиндрически булавовидная, в зрелом возрасте чаще цилиндрическая,
покрытая по всей длине заметной белой или буроватой сеточкой на светло-ореховом фоне.

    Мякоть:
Мякоть плотная, в зрелости слегка губчатая, при сдавливании ножка как бы пружинит.
Цвет белый, не изменяющийся на воздухе, под трубчатым слоем иногда
с желтым оттенком. Запах приятный. Вкус сладковатый.
    </string>
    <string name="whitegrib_elovi">"""
     Особенности роста:
Белый гриб еловый отличается крупным размером - его вес иногда достигает 2 кг.
Этот гриб легко спутать с белым грибом дубовым и белым грибом березовым,
от которых  он отличается местом обитания (хвойные леса) и
цветом шляпки(бурая, красновато-бурая, каштаново-бурая).
Вкус приятный. Грибной насыщенный запах.

     Применение:
В белых грибах  еловых содержатся вещества,
оказывающие противоопухолевое и тонизирующее действие.
Содержит полисахариды, которые обладают противовоспалительным
действием и капиляроукрепляющим. Также в белых грибах содержится бетаин,
холин и герценин,  полезные при стенокардии. В состав входят микроэлементы,
например, фосфор, калий, белки. Белый грибеловый обладает пищевой ценностью
и стимулирует выработку пищеварительных соков.
Именно белые грибы лучше всего стимулируют пищеварение,
по этому показателю они даже превосходят мясной бульон.

     Места обитания:
Белый гриб еловый растет в умеренных широтах Северного полушария.
Его можно встретить как в диких лесах, так и в культурных,
иногда в парках и скверах, садах. Плодоносит с августа до ноября.

     Шляпка:
Диаметр шляпки до 25 см, ножка иногда вырастает в длиной до 20 см.
Поверхность шляпки гладкая, сухая. Белый гриб еловый
образует микоризу с елью. Шляпка у молодых грибов беловатого цвета,
гладкая, немного опушенная, полукруглой формы,
с возрастом становится коричневой тёмно-бурой, голой морщинистой,
а по форме от выпукло-плоской до подушковидной и  до 25 см диаметром.

     Ножка:
Ножка бочонковидная или немного утолщённая в основании цилиндрической формы,
в длину не превышает 18 см. Поверхность кремового цвета ссетчатым рисунком у основания.
Трубочки вначале белые, позже - светло-желтые и, наконец,
зеленоватые или оливково-зеленые, по длине Зсм, у ножки вырезанные или свободные.

     Мякоть:
Мякоть плотная, твёрдая, белая, не меняет окраски на срезе и изломе.
    """</string>
    <string name="whitegrib_borovik">"""

     Особенности роста:
Белый гриб боровик из рода Боровик, семейство Болетовые,
один из самых ярких представителей видов Боровика.
Вкус мягкий, выражен слабо. Запах  у свежих грибов слабо различим,
но появляется сильный приятный грибной запах при варке и сушке.
Время сбора  с мая по октябрь, при этом растут они не постоянно, а с перерывами.
Первый урожай не слишком обильный, а затем наблюдается более активный рост.
Желчный гриб  удостоился звания Ложного Белого гриба,
и сходство, особенно у молодых грибов, поразительное.

    Места обитания:
Белый гриб боровик  растет в хвойных,
лиственных и смешанных лесах. Из Северного полушария он был занесен в Южную Америку и Африку.
Лишь два континента — Австралия и Антарктида – обойдены присутствием белого гриба боровика.
Можно встретить одиночно или кольцами.

    Шляпка:
Шляпка диаметром от 5 до 25 см , изначально выпуклая,
затем подушковидно- или выпукло-распростертая, редко волокнисто-чешуйчатая ,
гладкая или морщинистая, в сухую погоду может растрескиваться, голая,
иногда тонко-войлочная у края.  В сухую  погоду поверхность матовая или блестящая,
во влажную - немного слизистая. Не снимается кожица. От коричневого до почти белого цвета,
с возрастом темнеет, может быть лимонно-желтым,  вплоть до оранжевых тонов.
Часто окраска не-равномерная, со светлыми краями, иногда с узким  ободком белого или желтого цвета.
Трубочки  длиной не превышает 2 см, поры округлые, мелкие.

    Ножка:
Ножка от 5 до 20 см в длину, и от 2 до 8 см в ширину, плотно-мясистая,
к основанию широко клубневидно-вздутая.
С возрастом ножка белого гриба боровика вытягивается и может стать цилиндрической,
расширенной или суженной посередине, но основание остается утолщенным,
в верхней части с четко выраженной сеточкой,
которая обычно расположена в верхней части ножки, но может и спускаться до основания,
значительно реже она отсутствует или слабо выражена.
Ножка грибы бывает белой, серовато-коричневатой, бледно-бурой по цвету.
Иногда может иметь тот же оттенок, что и шляпка, но на тон светлеей.

    Мякоть:
Мякоть крепкая, сочно-мясистая, у старых грибов волокнистая, белая,
не изменяющаяся на разрезе,
порой может быть слой бурого или красно-коричневого оттенка под темноокрашенной кожицей.
    """</string>
    <string name="chanterelle_gray">"""
    Применение:
Лисичка серая - съедобный, но фактически безвкусный гриб.

     Места обитания:
Лисичка серая  плодоносит в лиственных и
смешанных лесах с конца июля до начала октября.
Часто встречается большими пучками.

     Особенности роста:
Серая лисичка  имеет слабое сходство с вороночником рожковидным,
у которого отсутствуют пластинообразные складки.

     Шляпка:
Лисичка серая  имеет шляпку воронковидную,
с неровными волнистыми краями, диаметром 3-6 см.
Внутренняя поверхность  шляпки гладкая, серо-бурая,
а внешняя покрыта более светлыми складками, напоминающими пластинки.

     Ножка:
Ножка плавно переходит в шляпку, расширяясь в верхней части,
высотой 3-5 см, толщиной до 0,5 см.
Цвет  у ножки серый, пепельный, серо-коричневый.

     Мякоть:
Мякоть тонкая, резинисто-волокнистая, без запаха и вкуса.
Спороносный слой складчатый, жилисто-пластинчатый,
серо-пепельного цвета, часто со светлым налетом.
Споровый порошок белого цвета.
  """  </string>
</resources>