<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".main_menu">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="112dp"
        android:layout_height="94dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="#DCC59D"
        android:contentDescription="@string/a"
        android:onClick="kat_1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41"
        app:srcCompat="@drawable/us1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="30sp"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="112dp"
        android:layout_height="94dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="#DCC59D"
        android:contentDescription="@string/h"
        android:onClick="kat_2"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412"
        app:srcCompat="@drawable/us3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="112dp"
        android:layout_height="94dp"
        android:backgroundTint="#DCC59D"
        android:contentDescription="@string/p"
        android:onClick="kat_3"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412"
        app:srcCompat="@drawable/us4_2" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="112dp"
        android:layout_height="94dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#DCC59D"
        android:contentDescription="@string/t"
        android:onClick="falses"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        app:srcCompat="@drawable/log" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="112dp"
        android:layout_height="94dp"
        android:layout_marginStart="44dp"
        android:backgroundTint="#DCC59D"
        android:contentDescription="@string/r"
        android:onClick="ogorod"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847"
        app:srcCompat="@drawable/ogor" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="112dp"
        android:layout_height="94dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="#DCC59D"
        android:contentDescription="@string/im"
        android:onClick="no_sedob"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847"
        app:srcCompat="@drawable/no_ced" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="112dp"
        android:layout_height="94dp"
        android:backgroundTint="#DCC59D"
        android:contentDescription="@string/todof"
        android:onClick="aidovito"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:srcCompat="@drawable/aidov" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="92dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:text="@string/taste_category_1"
        android:textColor="@color/bright_brown"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="109dp"
        android:layout_height="84dp"
        android:layout_marginTop="12dp"
        android:text="@string/taste_category_conditionally_edible_3"
        android:textColor="@color/bright_brown"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="92dp"
        android:layout_height="86dp"
        android:text="@string/taste_category_edible_3"
        android:textColor="@color/bright_brown"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="112dp"
        android:layout_height="54dp"
        android:text="@string/false_mushrooms"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="103dp"
        android:layout_height="47dp"
        android:text="@string/Mushrooms_in_the_garden"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="132dp"
        android:layout_height="51dp"
        android:text="@string/inedible_mushrooms"
        android:textColor="@color/white_red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/poisonous_mushrooms"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

</androidx.constraintlayout.widget.ConstraintLayout>